	 to run until that event occurs.
20031230 fuse.c: another attempt to get tape_init() in the right place
	 (patch #867906) (Fred).
20031231 z80/z80_ops.c: use gcc's computed goto feature to give a small
	 performance boost.
20031231 ui/gtk/fileselector.c: remove incorrect pointer warnings.
20031231 ui/sdl/sdljoystick.c: 'port' is unused in ui_joystick_read().
	 (patch #868419) (Fred).
20031231 rzx.c, ui/gkt/gtkui.c: always assign float values to timer_count.
	 (patch #868415) (Fred).
20031231 ui/win32: first (simple!) native Win32 user interface (Marek).
20031231 ChangeLog: bring up-to-date.
20040101 ui/sdl/sdlui.c, widget/widget.c: put speed in SDL title (patch
	 #868412) (Fred).
20040101 ui/sdl/sdldisplay.c: simplify uidisplay_frame_end by combining the
         two loops increasing the chance that the data processed by the
	 first is still available in cache for the second (patch #868414)
	 (Fred).
20040102 fuse.[ch], machine.c: make the buffer holding Fuse's starting
	 directory be of length PATH_MAX (patch #868409) (Fred).
20040102 fuse.c: remove unused variable 'autoload' from fuse_init().
20040102 ui/scaler, ui/sdl/sdldisplay.c: add Timex 1.5x scaler (part of
	 patch #868418) (Fred).
20040102 ui/scaler/scalers.c: merges to keep us close to ScummVM's code
	 (rest of patch #868418) (Fred).
20040102 ui/gtk/{gtkdisplay,gtkui}.c: allow 3x3 scaled modes.
20040102 ui/gtk/gtkdisplay.c: in uidisplay_area, reorder the loop to
	 improve cache localisation and then apply the obvious
	 optimisations.
20040104 tape.[ch], ui/ui.h, ui/gtk/browse.c: make the GTK+ tape browser
	 no longer modal.
20040104 widget/{browse,widget}.c: fix up the widget UIs for the new
	 tape browser code.
20040104 tape.[ch], ui/gtk/browse.c: add a 'tape modified' indicator to
	 the GTK+ tape browser window.
20040104 tape.[ch], utils.c, ui/ui.h, ui/gtk/{confirm,gtkui.c}: confirm
	 before an attempt is made to close a modified tape.